syntax = "proto3";

package prod;

option go_package = "prod.pb";

// Product represents a product in the system.
message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string category = 5;
  string created_at = 6;
  string updated_at = 7;
}

// Review represents a review of a product.
message Review {
  int64 id = 1;
  int64 product_id = 2;
  int64 user_id = 3;
  int32 rating = 4;
  string comment = 5;
  string created_at = 6;
}

// ProductService handles operations related to products.
service ProductService {
  // CreateProduct creates a new product.
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);

  // GetProduct retrieves a product by its ID.
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);

  // UpdateProduct updates an existing product.
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);

  // DeleteProduct deletes a product by its ID.
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);

  // CreateReview creates a new review for a product.
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);

  // DeleteReview deletes a review for a product by its ID.
  rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
}

// Request message to create a new product.
message CreateProductRequest {
  Product product = 1;
}

// Response message for creating a new product.
message CreateProductResponse {
  int64 product_id = 1;
}

// Request message to retrieve a product by its ID.
message GetProductRequest {
  int64 product_id = 1;
}

// Response message for retrieving a product.
message GetProductResponse {
  Product product = 1;
}

// Request message to update an existing product.
message UpdateProductRequest {
  Product product = 1;
}

// Response message for updating a product.
message UpdateProductResponse {
  Product product = 1;
}

// Request message to delete a product by its ID.
message DeleteProductRequest {
  int64 product_id = 1;
}

// Response message for deleting a product.
message DeleteProductResponse {
  bool success = 1;
}

// Request message to create a new review for a product.
message CreateReviewRequest {
  Review review = 1;
}

// Response message for creating a new review.
message CreateReviewResponse {
  int64 review_id = 1;
}

// Request message to delete a review for a product by its ID.
message DeleteReviewRequest {
  int64 review_id = 1;
}

// Response message for deleting a review.
message DeleteReviewResponse {
  bool success = 1;
}
